fixed issue where ingredient buttons didn't align

--- a/src/app/ingredient-list-page.component.css
+++ b/src/app/ingredient-list-page.component.css
@@ -4,6 +4,8 @@ section {
 
 .card {
     box-shadow: 10px 10px 10px #EBEBEB;
+    width: 20rem;
+    height: 22rem;
 }
 
 .buttonStyle {
